// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the project card renders correctly when loading is false 1`] = `
<div
  className="bio"
>
  <div
    className="my-bio"
  >
    MY PROFILE
  </div>
  <div
    className="card-bio"
    id="fellow-cristian.bartell@andela.com"
    role="button"
    tabIndex="0"
  >
    <RenderItem
      title="Cohort"
    >
      Class 10 - KLA
    </RenderItem>
    <RenderItem
      title="Level"
    >
      D0B
    </RenderItem>
    <RenderItem
      title="Start Date"
    >
      2018-12-15
    </RenderItem>
    <RenderItem
      title="Estimated End Date"
    >
      2019-03-11
    </RenderItem>
  </div>
</div>
`;

exports[`tests the project card renders correctly when loading is true 1`] = `
<div
  className="bio"
>
  <div
    className="my-bio"
  >
    MY PROFILE
  </div>
  <div
    className="card-bio"
    id="fellow-undefined"
    role="button"
    tabIndex="0"
  >
    <Loader
      size=""
    />
  </div>
</div>
`;
